完成APP学生端首页静态页面

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">云智教育</string>
     <string name="welcome_word">云享资源&#160;&#160;&#160;&#160;智慧教学</string>
-    <string name="index">主页</string>
+    <string name="index">首页</string>
     <string name="course">课程</string>
     <string name="learn">学习</string>
     <string name="person">个人</string>
     <string name="click2quit">再按一次退出程序</string>
+    <string name="show_more">查看更多</string>
 </resources>
