--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="person">个人</string>
     <string name="click2quit">再按一次退出程序</string>
     <string name="show_more">查看更多</string>
+    <string name="school">院校</string>
 </resources>
