完成部分页面

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="school_information">资讯</string>
     <string name="school_announcement">公告</string>
     <string name="school_circle">学友圈</string>
+    <string name="search">搜索</string>
 
 </resources>
