增加了APP学生端演示的计划，完成了部分APP学习界面的静态界面，优化了部分APPUI设计

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -23,5 +23,9 @@
     <string name="school_announcement">公告</string>
     <string name="school_circle">学友圈</string>
     <string name="search">搜索</string>
+    <string name="mycourse">我的课程</string>
+    <string name="practical_training">综合实训</string>
+    <string name="mytask">我的任务</string>
+    <string name="grade_query">成绩查询</string>
 
 </resources>
