完成了APP的一些内容

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="practical_training">综合实训</string>
     <string name="mytask">我的任务</string>
     <string name="grade_query">成绩查询</string>
+    <string name="live_room">直播间</string>
 
 </resources>
