--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="mytask">我的任务</string>
     <string name="grade_query">成绩查询</string>
     <string name="live_room">直播间</string>
+    <string name="server_response_error">服务器响应异常!</string>
 
 </resources>
