完成了APP课程部分的一些内容,修复平台资讯不显示的问题,上传了返回前端对象的VO类,上传新的接口列表文档

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="grade_query">成绩查询</string>
     <string name="live_room">直播间</string>
     <string name="server_response_error">服务器响应异常!</string>
+    <string name="search_another_course">没有找到相关课程,请换个关键字搜索</string>
 
 </resources>
