修改了一些Android学生端的页面，修改了S3的文档

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -54,6 +54,12 @@
         <item>RotateDown</item>
         <item>Accordion</item>
     </string-array>
+    <string name="detail">详情</string>
+    <string name="misstake">错题</string>
+    <string name="exam">考试</string>
+    <string name="material">资料</string>
+    <string name="overview">总览</string>
+    <string name="quit_course">退选课程</string>
 
 
 </resources>
