--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
     <string name="material">资料</string>
     <string name="overview">总览</string>
     <string name="quit_course">退选课程</string>
+    <string name="exercises">综合练习</string>
+    <string name="course_disscuss">课程讨论</string>
 
 
 </resources>
