完成了APP学生端一些页面和功能

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -62,6 +62,8 @@
     <string name="quit_course">退选课程</string>
     <string name="exercises">综合练习</string>
     <string name="course_disscuss">课程讨论</string>
+    <string name="send">发送</string>
+    <string name="clear">清空</string>
 
 
 </resources>
