完成了综合实训相关

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -68,6 +68,8 @@
     <string name="comment">评论</string>
     <string name="submit">提交</string>
     <string name="please_input_content">请输入内容</string>
+    <string name="upload">上传</string>
+    <string name="chose_file">选择文件</string>
 
 
 </resources>
