--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="overview">总览</string>
     <string name="quit_course">退选课程</string>
     <string name="exercises">综合练习</string>
-    <string name="course_disscuss">课程讨论</string>
+    <string name="course_disscuss">课程交流</string>
     <string name="send">发送</string>
     <string name="clear">清空</string>
     <string name="delete">删除</string>
@@ -70,6 +70,7 @@
     <string name="please_input_content">请输入内容</string>
     <string name="upload">上传</string>
     <string name="chose_file">选择文件</string>
+    <string name="new_disscuss">新话题</string>
 
 
 </resources>
